Fix uneven circle mask on about avatar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,8 +49,7 @@ body {
     border-radius: 50%;
     max-width: 150px;
     float: left;
-    /* padding: 15px; */
-    padding-right: 15px;
+    margin-right: 15px;
 }
 
 .icon {
